--- a/index.html
+++ b/index.html
@@ -56,6 +56,13 @@
 						<h3>Comentario</h3>
 						<textarea id="valor"></textarea>
 					</form>
+					<div class="row">
+						<div class="col-md-12 text-center">
+							<button type="button" id="btn-guardar" class="btn btn-primary" value="Guardar datos">Guardar datos</button>
+			
+							<button type="button" id="btn-limpiar" class="btn btn-primary" value="Limpiar datos">Limpiar datos</button>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
