JS y CSS listos

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<header>
 		<div class="container">
 			<div class="row">
-				<div class="col-md-3 logo">
+				<div class="col-md-3 col-xs-6 logo">
 					<img src="img/fotolog-logo.png" alt="">
 				</div>
 			</div>
@@ -19,14 +19,14 @@
 	</header>
 	<section id="bannerflog">
 		<div class="container">
-			<div class="col-md-12 text-center">
+			<div class="col-md-12 col-sm-12 col-xs-12 text-center">
 				<h1>..::ÁrÉnItÁ .´´´ ÁmíGáS x CrÉw::..</h1>
 			</div>
 		</div>
 	</section>
 	<section id="contenido">
 		<div class="container">
-			<div class="col-md-2 recientes">
+			<div class="col-md-2 hidden-xs hidden-sm recientes">
 				<a href="" class="fotos">Fotos Recientes</a>
 				<img src="img/jarcor.jpg">
 				<img src="img/foto_0920140822124434.jpg" alt="">
@@ -37,7 +37,7 @@
 				<img src="img/m1_768_11MS.jpg" alt="">
 				<p>AqUi EStAáá Mi AmIgA ArEnItAáÁÁ</p>
 			</div>
-			<div class="col-md-2 recientes">
+			<div class="col-md-2 hidden-xs hidden-sm recientes">
 				<a href="" class="fotos">Fotos Recientes</a>
 				<img src="img/jarcor.jpg">
 				<img src="img/foto_0920140822124434.jpg" alt="">
